--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h2 class="text-info">i'm yakoob</h2>
 
               <h3 class="text-info">i'm a web developer</h3>
-              <p>"here is my special quots goes ,<br>and here is its continued and its<br> over now"</p>
+              <p>"now i don't know what to say ,but<br>one day i will say something <br> thats for sure"</p>
               <span class="text-secondary">-yakoob</span>
             </div>
 
